tests/lean/phashmap_inst_coherence.lean.expected.out
phashmap_inst_coherence.lean:12:53-12:54: error: Application type mismatch: In the appplication
  m.find?
the final argument
  m
has type
  @PersistentHashMap Nat Nat instBEqOfDecidableEq instHashableNat : Type
but is expected to have type
  @PersistentHashMap Nat Nat ?m natDiffHash : Type
